# apigatewayrust

./: Cargo.toml  README.MD  routes.json
src/: main.rs  modname.rs
src/application/controller/: configuration.rs
src/infra/: file_system.rs  mod.rs  rest.rs
src/routes/: config.rs  methods.rs  mod.rs
